Redo dk_start(). If di->di_diskstart() runs synchronous its biodone() will call dk_start() via dk_iodone() before the buffer gets removed from queue.

Approved by: Roland Dowdeswell <elric@netbsd.org>

Fixes PR #25240